--- a/src/Cake.Issues.PullRequests.Tfs/packages.config
+++ b/src/Cake.Issues.PullRequests.Tfs/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Cake.Core" version="0.22.0" targetFramework="net46" />
-  <package id="Cake.Issues" version="0.1.0-beta0004" targetFramework="net46" />
-  <package id="Cake.Issues.PullRequests" version="0.1.0-beta0003" targetFramework="net46" />
+  <package id="Cake.Issues" version="0.1.0" targetFramework="net46" />
+  <package id="Cake.Issues.PullRequests" version="0.1.0" targetFramework="net46" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net46" developmentDependency="true" />
   <package id="Desktop.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="Fody" version="2.1.2" targetFramework="net46" developmentDependency="true" />
