--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -36,8 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.26.0" />
-    <PackageReference Include="Cake.Issues" Version="0.1.0" />
-    <PackageReference Include="Cake.Issues.Testing" Version="0.1.0" />
+    <PackageReference Include="Cake.Issues" Version="0.2.0-beta0004" />
+    <PackageReference Include="Cake.Issues.Testing" Version="0.2.0-beta0004" />
     <PackageReference Include="Cake.Testing" Version="0.26.0" />
     <PackageReference Include="Shouldly" Version="2.8.3" />
     <PackageReference Include="StyleCop.Analyzers">
