--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -38,8 +38,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.28.0" />
-    <PackageReference Include="Cake.Issues" Version="0.2.0" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.2.0" />
+    <PackageReference Include="Cake.Issues" Version="0.3.0-beta0004" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="0.3.0-beta0002" />
     <PackageReference Include="Costura.Fody">
       <Version>2.0.1</Version>
     </PackageReference>
