--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -36,8 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.28.0" />
-    <PackageReference Include="Cake.Issues" Version="0.4.0" />
-    <PackageReference Include="Cake.Issues.Testing" Version="0.4.0" />
+    <PackageReference Include="Cake.Issues" Version="0.5.0-beta0002" />
+    <PackageReference Include="Cake.Issues.Testing" Version="0.5.0-beta0002" />
     <PackageReference Include="Cake.Testing" Version="0.28.0" />
     <PackageReference Include="Shouldly" Version="3.0.0" />
     <PackageReference Include="StyleCop.Analyzers">
