--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -36,9 +36,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.28.0" />
-    <PackageReference Include="Cake.Issues" Version="0.5.0" />
-    <PackageReference Include="Cake.Issues.Testing" Version="0.5.0" />
+    <PackageReference Include="Cake.Issues" Version="0.6.0-beta0001" />
+    <PackageReference Include="Cake.Issues.Testing" Version="0.6.0-beta0001" />
     <PackageReference Include="Cake.Testing" Version="0.28.0" />
+    <PackageReference Include="NSubstitute">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Shouldly" Version="3.0.0" />
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.0.2</Version>
@@ -71,6 +74,9 @@
     <Compile Include="ContentProviderTests.cs" />
     <Compile Include="GitPullRequestCommentThreadExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TfsFilteringByModifiedFilesCapabilityTests.cs" />
+    <Compile Include="TfsDiscussionThreadsCapabilityTests.cs" />
+    <Compile Include="TfsCheckingCommitIdCapabilityTests.cs" />
     <Compile Include="TfsCredentialsExtensionsTests.cs" />
     <Compile Include="TfsPullRequestSettingsTests.cs" />
   </ItemGroup>
