--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -38,8 +38,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.28.0" />
-    <PackageReference Include="Cake.Issues" Version="0.5.0" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.5.0" />
+    <PackageReference Include="Cake.Issues" Version="0.6.0-beta0001" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="0.6.0-beta0001" />
     <PackageReference Include="Costura.Fody">
       <Version>3.1.0</Version>
     </PackageReference>
@@ -83,6 +83,10 @@
     <Compile Include="ContentProvider.cs" />
     <Compile Include="GitPullRequestCommentThreadExtensions.cs" />
     <Compile Include="ITfsCredentials.cs" />
+    <Compile Include="ITfsPullRequestSystem.cs" />
+    <Compile Include="TfsDiscussionThreadsCapability.cs" />
+    <Compile Include="TfsFilteringByModifiedFilesCapability.cs" />
+    <Compile Include="TfsCheckingCommitIdCapability.cs" />
     <Compile Include="TfsCredentialsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TfsPullRequestSettings.cs" />
