Split aliases into partial classes

--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TfsPullRequestSettings.cs" />
     <Compile Include="TfsPullRequestSystem.cs" />
+    <Compile Include="TfsPullRequestSystemAliases.CommitId.cs" />
+    <Compile Include="TfsPullRequestSystemAliases.Vote.cs" />
+    <Compile Include="TfsPullRequestSystemAliases.PullRequestSystem.cs" />
+    <Compile Include="TfsPullRequestSystemAliases.Authentication.cs" />
     <Compile Include="TfsPullRequestSystemAliases.cs" />
     <Compile Include="TfsPullRequestVote.cs" />
   </ItemGroup>
