--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -41,7 +41,7 @@
     <PackageReference Include="Cake.Issues" Version="0.6.0-beta0002" />
     <PackageReference Include="Cake.Issues.PullRequests" Version="0.6.0-beta0002" />
     <PackageReference Include="Cake.Tfs">
-      <Version>0.1.0-beta0001</Version>
+      <Version>0.1.0</Version>
     </PackageReference>
     <PackageReference Include="Costura.Fody">
       <Version>3.1.0</Version>
@@ -61,7 +61,6 @@
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.0.2</Version>
     </PackageReference>
-    <PackageReference Include="TfsUrlParser" Version="1.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -86,7 +85,7 @@
     <Compile Include="TfsCheckingCommitIdCapability.cs" />
     <Compile Include="TfsCredentialsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TfsPullRequestSettings.cs" />
+    <Compile Include="TfsPullRequestSystemSettings.cs" />
     <Compile Include="TfsPullRequestSystem.cs" />
     <Compile Include="TfsPullRequestSystemAliases.PullRequestSystem.cs" />
     <Compile Include="TfsPullRequestSystemAliases.cs" />
