--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -38,8 +38,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.28.0" />
-    <PackageReference Include="Cake.Issues" Version="0.6.0-beta0002" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.6.0-beta0002" />
+    <PackageReference Include="Cake.Issues" Version="0.6.0" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="0.6.0" />
     <PackageReference Include="Cake.Tfs">
       <Version>0.1.0</Version>
     </PackageReference>
