Add test cases for pull request system

--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Capabilities\TfsDiscussionThreadsCapabilityTests.cs" />
     <Compile Include="Capabilities\TfsCheckingCommitIdCapabilityTests.cs" />
     <Compile Include="TfsCredentialsExtensionsTests.cs" />
+    <Compile Include="TfsPullRequestSystemTests.cs" />
     <Compile Include="TfsPullRequestSystemSettingsTests.cs" />
   </ItemGroup>
   <ItemGroup>
