--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -40,27 +40,13 @@
     <PackageReference Include="Cake.Core" Version="0.28.0" />
     <PackageReference Include="Cake.Issues" Version="0.6.0" />
     <PackageReference Include="Cake.Issues.PullRequests" Version="0.6.0" />
-    <PackageReference Include="Cake.Tfs">
-      <Version>0.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="Costura.Fody">
-      <Version>3.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
-      <Version>2.6.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.TeamFoundationServer.Client">
-      <Version>15.112.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient">
-      <Version>15.112.1</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers">
-      <Version>1.0.2</Version>
-    </PackageReference>
+    <PackageReference Include="Cake.Tfs" Version="0.2.1" />
+    <PackageReference Include="Costura.Fody" Version="3.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.1" />
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="15.112.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="15.112.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
