--- a/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
@@ -6,12 +6,12 @@
     <version>0.0.0</version>
     <authors>BBT Software AG and contributors</authors>
     <owners>bbtsoftware, pascalberger, cake-contrib</owners>
-    <summary>TFS and VSTS support for the Cake.Issues addin for Cake Build Automation System</summary>
+    <summary>TFS and Azure DevOps support for the Cake.Issues addin for Cake Build Automation System</summary>
     <description>
-The Team Foundation Server / Visual Studio Team Services support for the Cake.Issues addin for Cake allows you to
-write found issues as comments Team Foundation Server or Visual Studio Team Services pull requests.
+The Team Foundation Server / Azure DevOps support for the Cake.Issues addin for Cake allows you to
+write found issues as comments Team Foundation Server or Azure DevOps pull requests.
 
-This addin provides the aliases for writing to Team Foundation Server or Visual Studio Team Services pull requests.
+This addin provides the aliases for writing to Team Foundation Server or Azure DevOps pull requests.
 It also requires the core Cake.Issues and Cake.Issues.PullRequests addins and one or more issue providers.
 
 See the Project Site for an overview of the whole ecosystem of addins for working with issues in Cake scripts.
@@ -22,7 +22,7 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs"/>
     <copyright>Copyright © BBT Software AG and contributors</copyright>
-    <tags>Cake Script Cake-Issues Cake-PullRequestSystem Issues PullRequest TFS VSTS</tags>
+    <tags>Cake Script Cake-Issues Cake-PullRequestSystem Issues PullRequest TFS Azure-DevOps</tags>
     <releaseNotes>https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs/releases/tag/0.6.2</releaseNotes>
   </metadata>
   <files>
