--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -78,15 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Capabilities\CommentExtensions.cs" />
-    <Compile Include="Capabilities\CommentThreadStatusExtensions.cs" />
+    <Compile Include="Capabilities\TfsCommentExtensions.cs" />
+    <Compile Include="Capabilities\TfsCommentThreadStatusExtensions.cs" />
     <Compile Include="ContentProvider.cs" />
-    <Compile Include="Capabilities\GitPullRequestCommentThreadExtensions.cs" />
+    <Compile Include="Capabilities\TfsPullRequestCommentThreadExtensions.cs" />
     <Compile Include="ITfsPullRequestSystem.cs" />
     <Compile Include="Capabilities\TfsDiscussionThreadsCapability.cs" />
     <Compile Include="Capabilities\TfsFilteringByModifiedFilesCapability.cs" />
     <Compile Include="Capabilities\TfsCheckingCommitIdCapability.cs" />
-    <Compile Include="TfsCredentialsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TfsPullRequestSystemSettings.cs" />
     <Compile Include="TfsPullRequestSystem.cs" />
