Upgrade TFS SDK to 15.131.1

--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -50,10 +50,13 @@
       <Version>2.6.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.TeamFoundationServer.Client">
-      <Version>15.112.1</Version>
+      <Version>15.131.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Services.Client">
+      <Version>15.131.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient">
-      <Version>15.112.1</Version>
+      <Version>15.131.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
