--- a/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
@@ -16,7 +16,7 @@ It also requires the core Cake.Issues and Cake.Issues.PullRequests addins and on
 
 See the Project Site for an overview of the whole ecosystem of addins for working with issues in Cake scripts.
     </description>
-    <licenseUrl>https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs/blob/develop/LICENSE</licenseUrl>
+    <license type="expression">MIT</license>
     <projectUrl>http://cake-contrib.github.io/Cake.Issues.Website</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
