(GH-21) Fix iconUrl

--- a/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>Cake.Issues.PullRequests.Tfs</id>
@@ -18,9 +18,9 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
     </description>
     <licenseUrl>https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs/blob/develop/LICENSE</licenseUrl>
     <projectUrl>http://cake-contrib.github.io/Cake.Issues.Website</projectUrl>
-    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs"/>
+    <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs" />
     <copyright>Copyright © BBT Software AG and contributors</copyright>
     <tags>Cake Script Cake-Issues Cake-PullRequestSystem Issues PullRequest TFS Azure-DevOps</tags>
     <releaseNotes>https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs/releases/tag/0.6.4</releaseNotes>
