--- a/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.Tfs.nuspec
@@ -20,7 +20,7 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
     <projectUrl>http://cake-contrib.github.io/Cake.Issues.Website</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs"/>
+    <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs.git"/>
     <copyright>Copyright © BBT Software AG and contributors</copyright>
     <tags>Cake Script Cake-Issues Cake-PullRequestSystem Issues PullRequest TFS Azure-DevOps Azure-DevOps-Server</tags>
     <releaseNotes>https://github.com/cake-contrib/Cake.Issues.PullRequests.Tfs/releases/tag/0.7.0</releaseNotes>
