--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -36,8 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.33.0" />
-    <PackageReference Include="Cake.Issues" Version="0.7.0-beta0002" />
-    <PackageReference Include="Cake.Issues.Testing" Version="0.7.0-beta0002" />
+    <PackageReference Include="Cake.Issues" Version="0.7.0" />
+    <PackageReference Include="Cake.Issues.Testing" Version="0.7.0" />
     <PackageReference Include="Cake.Testing" Version="0.33.0" />
     <PackageReference Include="NSubstitute">
       <Version>4.0.0</Version>
