Fix code analysis issues

--- a/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs.Tests/Cake.Issues.PullRequests.Tfs.Tests.csproj
@@ -11,6 +11,7 @@
 
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\Cake.Issues.PullRequests.Tfs.Tests.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
