Enable Codecov reporting

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,5 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
   steps:
-  - powershell: ./build.ps1
+  - powershell: ./build.ps1 -target Buildserver
     displayName: 'Cake Build'
