--- a/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
+++ b/src/Cake.Issues.PullRequests.Tfs/Cake.Issues.PullRequests.Tfs.csproj
@@ -41,7 +41,7 @@
     <PackageReference Include="Cake.Issues" Version="0.7.0" />
     <PackageReference Include="Cake.Issues.PullRequests" Version="0.7.0" />
     <PackageReference Include="Cake.Tfs">
-      <Version>0.3.0</Version>
+      <Version>0.3.1-beta0001</Version>
     </PackageReference>
     <PackageReference Include="Costura.Fody">
       <Version>3.3.3</Version>
