--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,15 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
   steps:
-  - powershell: ./build.ps1
+  - powershell: |
+      $ENV:CAKE_SKIP_GITVERSION=([string]::IsNullOrEmpty($ENV:SYSTEM_PULLREQUEST_PULLREQUESTID) -eq $False).ToString()
+      .\build.ps1
+      exit $LASTEXITCODE 
+    displayName: 'Cake Build'
+- job: Ubuntu
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - bash: |
+      ./build.sh
     displayName: 'Cake Build'
