Update to Cake.Issues 2.0

--- a/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
@@ -36,14 +36,14 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
   </PropertyGroup>
 
    <ItemGroup>
-    <InternalsVisibleTo Include="Cake.Issues.PullRequests.AzureDevOps.Tests"/>
-    <InternalsVisibleTo Include="DynamicProxyGenAssembly2"/>
+    <InternalsVisibleTo Include="Cake.Issues.PullRequests.AzureDevOps.Tests" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="2.0.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues" Version="2.0.0-beta0001" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="2.0.0-beta0001" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Cake.AzureDevOps" Version="2.0.0-beta0001" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
