Multi-Target .NET 6, .NET 7 and .NET 8

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,19 @@ jobs:
   - task: UseDotNet@2
     inputs:
       version: '5.x'
+    displayName: 'Install .NET 5'
   - task: UseDotNet@2
     inputs:
       version: '6.x'
+    displayName: 'Install .NET 6'
   - task: UseDotNet@2
     inputs:
       version: '7.x'
+    displayName: 'Install .NET 7'
+  - task: UseDotNet@2
+    inputs:
+      version: '8.x'
+    displayName: 'Install .NET 8'
   - powershell: |
       $ENV:CAKE_SKIP_GITVERSION=([string]::IsNullOrEmpty($ENV:SYSTEM_PULLREQUEST_PULLREQUESTID) -eq $False).ToString()
       .\build.ps1
@@ -38,12 +45,19 @@ jobs:
   - task: UseDotNet@2
     inputs:
       version: '5.x'
+    displayName: 'Install .NET 5'
   - task: UseDotNet@2
     inputs:
       version: '6.x'
+    displayName: 'Install .NET 6'
   - task: UseDotNet@2
     inputs:
       version: '7.x'
+    displayName: 'Install .NET 7'
+  - task: UseDotNet@2
+    inputs:
+      version: '8.x'
+    displayName: 'Install .NET 8'
   - bash: |
       ./build.sh
     displayName: 'Cake Build'
@@ -56,12 +70,19 @@ jobs:
   - task: UseDotNet@2
     inputs:
       version: '5.x'
+    displayName: 'Install .NET 5'
   - task: UseDotNet@2
     inputs:
       version: '6.x'
+    displayName: 'Install .NET 6'
   - task: UseDotNet@2
     inputs:
       version: '7.x'
+    displayName: 'Install .NET 7'
+  - task: UseDotNet@2
+    inputs:
+      version: '8.x'
+    displayName: 'Install .NET 8'
   - bash: |
       ./build.sh --verbosity=diagnostic
     displayName: 'Cake Build'
